Version 1.14.6 - 2011-07-06

* support comment-line operation for html, css.
* display a better status when selecting a file.

Version 1.14.5 - 2010-11-23

* added large-file support for mmap of a file part.
* don't try to create file in mmap mode.
* changed license to GNU GPL v3 (regex.c already uses it).

Version 1.14.4 - 2010-11-08

* new function expand-tab-spans to replace multiples of tabs with
  spaces and one tab.
* allow mmap of file part (--mmap FileName:begin:length).
* updated named.conf syntax patterns.
* fixed minor visual glitches.

Version 1.14.3 - 2009-12-22

* added workaround for a ncurses getmouse bug.
* fixed compilation with gcc-4.4.x.

Version 1.14.2 - 2009-05-27

* added javascript patterns.
* fixed auto word wrap mode (reported by Stefano D'Archino).

Version 1.14.1 - 2009-05-22

* fixed html comment pattern.
* added more syntax colors (now 6).
* added txt2tags syntax patterns (Stefano D'Archino).

Version 1.14.0 - 2008-12-25

* allow syntax pattern inclusion from additional files.
* add support for nested syntax descriptions.
* use newer regex with non-greedy modifier (useful for C comments highlight).
* improved syntax descriptions for shell, configure.ac, perl.

Version 1.13.11 - 2008-10-25

* fixed some syntax selector patterns.
* display syntax selector in File/Info dialog.

Version 1.13.10 - 2008-09-20

* automatically turn off syntax highlighting for screens with too long lines.
* speed-optimized some syntax patterns.
* fixed DOS-EOL mode display in status line.

Version 1.13.9 - 2008-09-08

* added sum function in the calculator.
* migrated to current gnulib.
* syntax descriptions updated (Raphael Geissert).
* fvwm2rc syntax added (Aldis Berjoza).

Version 1.13.8 - 2008-08-11

* add kri/kind terminfo codes to keymap.
* fixed a build problem related to KEY_F on linux.
* php syntax updated (Igor Zhbanov).
* minor improvemens in shell and sql syntax patterns.

Version 1.13.7 - 2008-03-08
