@@ -1,7 +1,7 @@
 Begin3
 Title:		LE text editor
-Version:	1.14.6
-Entered-date:	2011-07-06
+Version:	1.14.7
+Entered-date:	2012-05-03
 Description:	LE has many block operations with stream and
 		rectangular blocks, can edit both unix and dos
 		style files (LF/CRLF), is binary clean, has hex
@@ -15,7 +15,7 @@ Keywords:	text editor, block, color, binary, hex, mmap, undo
 Author:		lav@yars.free.net (Alexander V. Lukyanov)
 Maintained-by:	lav@yars.free.net (Alexander V. Lukyanov)
 Primary-site:	ftp.yar.ru /pub/source/le
-		777 kB le-1.14.6.tar.gz
+		771 kB le-1.14.7.tar.gz
 Alternate-site:	metalab.unc.edu /pub/Linux/apps/editors/terminal
 Platforms:	Unix, C++, ncurses or sysv curses
 Copying-policy:	GNU GPL
