@@ -150,3 +150,19 @@ stdio-impl.h
 strerror-override.c
 strerror-override.h
 sys_uio.in.h
+closedir.c
+dirent-private.h
+dup.c
+filename.h
+fstat.c
+msvc-inval.c
+msvc-inval.h
+msvc-nothrow.c
+msvc-nothrow.h
+opendir.c
+pathmax.h
+readdir.c
+rewinddir.c
+signal.in.h
+stdalign.in.h
+sys_types.in.h
