@@ -118,3 +118,19 @@ ftello.m4
 lseek.m4
 mbtowc.m4
 sys_uio_h.m4
+closedir.m4
+dup.m4
+fstat.m4
+fstatat.m4
+largefile.m4
+msvc-inval.m4
+msvc-nothrow.m4
+nocrash.m4
+opendir.m4
+pathmax.m4
+readdir.m4
+rewinddir.m4
+signal_h.m4
+ssize_t.m4
+stdalign.m4
+sys_types_h.m4
